--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,85 +1,45 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+import type { CollectionEntry } from 'astro:content'
+import { format, formatDistanceToNow } from 'date-fns'
+import { Image } from 'astro:assets'
 
-type Props = CollectionEntry<'blog'>['data'];
+import Layout from '@/layouts/Main.astro'
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+import profilePic from '@/assets/images/iammarkps.jpg'
+
+type Props = CollectionEntry<'blog'>['data']
+
+const { title, pubDate } = Astro.props
 ---
 
-<html lang="en">
-	<head>
-		<BaseHead title={title} description={description} />
-		<style>
-			main {
-				width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
-			.prose {
-				width: 720px;
-				max-width: calc(100% - 2em);
-				margin: auto;
-				padding: 1em;
-				color: rgb(var(--gray-dark));
-			}
-			.title {
-				margin-bottom: 1em;
-				padding: 1em 0;
-				text-align: center;
-				line-height: 1;
-			}
-			.title h1 {
-				margin: 0 0 0.5em 0;
-			}
-			.date {
-				margin-bottom: 0.5em;
-				color: rgb(var(--gray));
-			}
-			.last-updated-on {
-				font-style: italic;
-			}
-		</style>
-	</head>
+<Layout>
+  <article>
+    <div class="mx-auto flex w-full flex-col justify-center">
+      <article
+        class="mx-auto mb-32 flex w-full max-w-2xl flex-col items-start justify-center">
+        <h1 class="mb-4 font-display text-3xl font-bold text-black md:text-5xl">
+          {title}
+        </h1>
+        <div
+          class="flex w-full flex-col items-start justify-between font-display md:flex-row md:items-center">
+          <div class="flex items-center">
+            <div class="w-[48px] h-[48px]">
+              <Image src={profilePic} alt="avatar" />
+            </div>
+            <p class="ml-2">iammarkps</p>
+          </div>
 
-	<body>
-		<Header />
-		<main>
-			<article>
-				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
-				<div class="prose">
-					<div class="title">
-						<div class="date">
-							<FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div>
-						<h1>{title}</h1>
-						<hr />
-					</div>
-					<slot />
-				</div>
-			</article>
-		</main>
-		<Footer />
-	</body>
-</html>
+          <p>
+            <time datetime={pubDate.toDateString()}
+              >{format(pubDate, 'LLLL d, yyyy')}</time
+            >
+            ({formatDistanceToNow(pubDate, { addSuffix: true })})
+          </p>
+        </div>
+        <div class="prose mt-4 w-full max-w-none">
+          <slot />
+        </div>
+      </article>
+    </div>
+  </article>
+</Layout>
