feat: updat about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,14 +6,18 @@ import Layout from '@/layouts/Main.astro'
   <div class="space-y-6">
     <p>I study Finance and interned at an investment bank, but I also code.</p>
     <div>
-      <p class="font-bold mb-4">My Heavy Rotation</p>
-      <iframe
-        allow="autoplay *; encrypted-media *;"
-        height="450"
-        style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
-        sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
-        src="https://embed.music.apple.com/th/playlist/heavy-rotation-mix/pl.pm-20e9f373919da08099a011b3fb435b93"
-      ></iframe>
+      <p class="font-bold">Projects</p>
+      <a
+        href="https://programming.in.th"
+        target="_blank"
+        rel="noopener noreferrer">PROGRAMMING.IN.TH</a
+      >
+      <br />
+      <a
+        href="https://github.com/triamudomcmc"
+        target="_blank"
+        rel="noopener noreferrer">triamudomcmc's</a
+      >
     </div>
     <div>
       <p class="font-bold">Links</p>
@@ -30,6 +34,16 @@ import Layout from '@/layouts/Main.astro'
       >
       <br />
       <a href="/resume.pdf" download="">resume.pdf</a>
+    </div>
+    <div>
+      <p class="font-bold mb-4">My Heavy Rotation</p>
+      <iframe
+        allow="autoplay *; encrypted-media *;"
+        height="450"
+        style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+        sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+        src="https://embed.music.apple.com/th/playlist/heavy-rotation-mix/pl.pm-20e9f373919da08099a011b3fb435b93"
+      ></iframe>
     </div>
   </div>
 </Layout>
