feat: update about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,16 +6,8 @@ import Layout from '@/layouts/Main.astro'
   <div class="space-y-8">
     <section>
       <h1 class="text-3xl font-bold mb-4">About Me</h1>
-      <p class="mb-4">
-        Hello! I'm Possawat Suksai (Mark), a Finance student with a passion for
-        coding and tech. I blend the worlds of finance and programming.
-      </p>
-      <p>
-        My journey includes an internship at an investment bank, where I gained
-        valuable insights into the financial industry. Simultaneously, I've been
-        honing my programming skills, allowing me to approach problems from both
-        financial and technical perspectives.
-      </p>
+      <p>I study finance and interned at an investment banking division.</p>
+      <p>I watch FORMULA 1 and support Red Bull Racing.</p>
     </section>
 
     <section>
@@ -41,14 +33,14 @@ import Layout from '@/layouts/Main.astro'
           >
           <p class="text-sm text-gray-600">
             Collaborative projects and contributions to the Triam Udom Suksa
-            School community.
+            School.
           </p>
         </div>
       </div>
     </section>
 
     <section>
-      <h2 class="text-2xl font-bold mb-4">Connect With Me</h2>
+      <h2 class="text-2xl font-bold mb-4">Links</h2>
       <div class="space-y-2">
         <a
           href="https://www.linkedin.com/in/possawat/"
@@ -72,9 +64,6 @@ import Layout from '@/layouts/Main.astro'
 
     <section>
       <h2 class="text-2xl font-bold mb-4">My Heavy Rotation</h2>
-      <p class="mb-4">
-        Music is a big part of my life. Here's what I'm currently listening to:
-      </p>
       <iframe
         allow="autoplay *; encrypted-media *;"
         height="450"
