--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,4 +1,5 @@
 ---
+import { ModeToggle } from '@/components/ModeToggle'
 import BaseHead from '../components/BaseHead.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 
@@ -12,27 +13,55 @@ import '@fontsource/ibm-plex-sans-thai/600.css'
 import '@fontsource/ibm-plex-sans-thai/700.css'
 ---
 
-<!doctype html>
+<script is:inline>
+  const getThemePreference = () => {
+    if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+      return localStorage.getItem('theme')
+    }
+    return window.matchMedia('(prefers-color-scheme: dark)').matches
+      ? 'dark'
+      : 'light'
+  }
+  const isDark = getThemePreference() === 'dark'
+  document.documentElement.classList[isDark ? 'add' : 'remove']('dark')
+
+  if (typeof localStorage !== 'undefined') {
+    const observer = new MutationObserver(() => {
+      const isDark = document.documentElement.classList.contains('dark')
+      localStorage.setItem('theme', isDark ? 'dark' : 'light')
+    })
+    observer.observe(document.documentElement, {
+      attributes: true,
+      attributeFilter: ['class'],
+    })
+  }
+</script>
+
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
-    <div class="min-h-screen flex flex-col items-center bg-white">
+    <div class="min-h-screen flex flex-col items-center">
       <div class="w-full max-w-2xl px-4">
         <header class="py-8">
           <div class="container mx-auto px-4">
             <nav
-              class="mx-auto flex flex-col items-center justify-between py-6 font-display">
-              <div class="flex w-full">
+              class="mx-auto flex flex-row justify-between py-6 font-display items-center"
+            >
+              <div class="flex">
                 <h2
-                  class="text-xl font-bold leading-tight tracking-tight md:text-4xl md:tracking-tighter">
+                  class="scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0"
+                >
                   <a href="/" class="hover:underline">IAMMARKPS</a>
                 </h2>
               </div>
+              <div>
+                <ModeToggle client:load />
+              </div>
             </nav>
             <div>
-              <p>
+              <p class="leading-7 [&:not(:first-child)]:mt-6">
                 A blog by <a href="/about" class="font-bold hover:underline"
                   >Possawat Suksai</a
                 >
