--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,28 +13,27 @@ const posts = (await getCollection('blog')).sort(
 
 <Layout>
   <section>
-    <h2 class="text-2xl font-semibold mb-6 text-black">Posts</h2>
-    <ul class="space-y-8">
+    <h2
+      class="scroll-m-20 pb-2 text-3xl font-semibold tracking-tight first:mt-0"
+    >
+      Posts
+    </h2>
+    <ul class="space-y-8 mt-6">
       {
         posts.map((post) => (
           <li class="pb-8 last:pb-0">
             <article>
-              <h3 class="text-xl font-medium">
-                <a
-                  href={`/blog/${post.slug}/`}
-                  class="text-black hover:underline font-display"
-                >
-                  {post.data.title}
-                </a>
+              <h3 class="font-display scroll-m-20 text-2xl font-semibold tracking-tight hover:underline">
+                <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
               </h3>
-              <p class="text-sm text-gray-600 mb-2">
+              <p class="text-sm leading-7 mb-2">
                 <time datetime={post.data.pubDate.toDateString()}>
                   {format(post.data.pubDate, 'LLLL d, yyyy')}
                 </time>
                 ({formatDistanceToNow(post.data.pubDate, { addSuffix: true })})
               </p>
 
-              <p class="text-gray-800 mt-3">{post.data.description}</p>
+              <p class="leading-7">{post.data.description}</p>
             </article>
           </li>
         ))
