--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,13 +5,13 @@ import Layout from '@/layouts/Main.astro'
 <Layout>
   <div class="space-y-8">
     <section>
-      <h1 class="text-3xl font-bold mb-4">About Me</h1>
+      <h1 class="mb-4 text-3xl font-bold">About Me</h1>
       <p>I study finance and interned at an investment banking division.</p>
       <p>I watch FORMULA 1 and support Red Bull Racing.</p>
     </section>
 
     <section>
-      <h2 class="text-2xl font-bold mb-4">Projects</h2>
+      <h2 class="mb-4 text-2xl font-bold">Projects</h2>
       <div class="space-y-4">
         <div>
           <a
@@ -40,7 +40,7 @@ import Layout from '@/layouts/Main.astro'
     </section>
 
     <section>
-      <h2 class="text-2xl font-bold mb-4">Links</h2>
+      <h2 class="mb-4 text-2xl font-bold">Links</h2>
       <div class="space-y-2">
         <a
           href="https://www.linkedin.com/in/possawat/"
@@ -63,7 +63,7 @@ import Layout from '@/layouts/Main.astro'
     </section>
 
     <section>
-      <h2 class="text-2xl font-bold mb-4">My Heavy Rotation</h2>
+      <h2 class="mb-4 text-2xl font-bold">My Heavy Rotation</h2>
       <iframe
         allow="autoplay *; encrypted-media *;"
         height="450"
