--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -42,12 +42,12 @@ import '@fontsource/ibm-plex-sans-thai/700.css'
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
-    <div class="min-h-screen flex flex-col items-center">
+    <div class="flex min-h-screen flex-col items-center">
       <div class="w-full max-w-2xl px-4">
         <header class="py-8">
           <div class="container mx-auto px-4">
             <nav
-              class="mx-auto flex flex-row justify-between py-6 font-display items-center"
+              class="mx-auto flex flex-row items-center justify-between py-6 font-display"
             >
               <div class="flex">
                 <h2
@@ -70,7 +70,7 @@ import '@fontsource/ibm-plex-sans-thai/700.css'
           </div>
         </header>
 
-        <main class="flex-grow container mx-auto px-4 py-8">
+        <main class="container mx-auto flex-grow px-4 py-8">
           <slot />
         </main>
       </div>
